# cpp-projects

./: .gitignore  CMakeLists.txt  build.sh
algorithms/: branchless_search.cpp  cache_aware_sort.cpp  data_layout_comparison.cpp
architecture/: cache_hierarchy_demo.cpp  icache_dcache_effects.cpp  mesi_simulation.cpp
concurrency/: CMakeLists.txt
concurrency/atomics/: atomic_fetch_add.cpp  atomic_vs_mutex.cpp  contention_effect.cpp
concurrency/false_sharing/: false_sharing_demo.cpp  padding_effect.cpp
concurrency/lock_free/: aba_problem.cpp  hazard_pointers.cpp  lock_free_stack.cpp
concurrency/locks/: lock_granularity.cpp  mutex_vs_spinlock.cpp  priority_inversion.cpp
concurrency/memory_order/: acquire_release.cpp  relaxed_vs_seq_cst.cpp  store_load_reordering.cpp
concurrency/scheduling/: cpu_affinity.cpp  numa_effect.cpp  oversubscription.cpp
fundamentals/: raii_lifetime.cpp  rule_of_five.cpp  value_vs_reference.cpp
hpc/: loop_tiling.cpp  parallel_reduction.cpp  simd_layouts.cpp
memory/: alignment_padding.cpp  custom_allocator.cpp  numa_locality.cpp
modern_cpp/: constexpr_usage.cpp  ranges_example.cpp  variant_optional.cpp
performance/: branch_prediction.cpp  cache_miss_analysis.cpp  instruction_count.cpp
tests/: CMakeLists.txt
tests/concurrency/: memory_order_visibility.cpp
tests/memory/: false_sharing_detection.cpp
tests/performance/: perf_regression.cpp
tests/regression/: known_issue_guard.cpp
tests/unit/: CMakeLists.txt  basic_correctness.cpp
