cmake_minimum_required(VERSION 3.20)
project(cpp-projects LANGUAGES CXX)
set(CMAKE_CXX_STANDARD 20)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(fundamentals)
add_subdirectory(modern_cpp)
add_subdirectory(concurrency)
add_subdirectory(memory)
add_subdirectory(performance)
add_subdirectory(hpc)
add_subdirectory(architecture)
add_subdirectory(algorithms)
add_subdirectory(tests)
